--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="/images/logo ES.svg" alt="">
           </div>
           <div class="col-4 navbar__search">
-            <img src="/images/bx-search-alt.png" alt="">
+            <img src="images/bx-search-alt.png" alt="">
           </div>
         </div>
       </div>
@@ -280,7 +280,7 @@
     <footer class="container__footer">
         <div class="footer__content">
           <div class="footer__content--logo">
-            <img src="/images/logo.png" alt="">
+            <img src="images/logo.png" alt="">
           </div>
           <div class="footer__content--p">
             <p>La Mente es Maravillosa is a property of Grupo MContigo© 2012 - 2020. All rights
@@ -292,7 +292,7 @@
           </div>
         </div>
         <div class="container__separator">
-            <img src="/images/Separator.png" alt="">
+            <img src="images/Separator.png" alt="">
         </div>
         <div class="footer__links">
           <ul class="links__list">
